ADD: Gup shup & other service integration